# Ctpt

./: test.txt
ctpt/: CMakeLists.txt  CMakeLists.txt~  Makefile  calculator.hpp  cross_toolchain_file.cmake  ctpt.pro  ctpt.pro.user.2.5pre1  ctpt_api (复件).cxx  ctpt_api.cxx  ctpt_api.hpp  data_source.cxx  data_source.hpp  data_source_fpga.cxx  data_source_fpga.hpp  doconfig.sh  exciting_scanner.cxx  exciting_scanner.hpp  field_excitation_calculator.hpp  fpga.cxx  fpga.cxx~  fpga.hpp  fpga.hpp~  functions.cxx  raw_wave.cxx  raw_wave.hpp  smc_api.c  smc_api.h  wave-signal.c  wave-signal.h  wave_gen.cxx
ctpt/build-arm/: CMakeCache.txt  Makefile  cmake_install.cmake  demo1  fpga
ctpt/doc/: conf.m  test_process.xmind
ctpt/doc/FPGA/: AD_Sample_registers_v1.00.xlsx  CT测试仪方案介绍.doc  Global_registers_v1.00.xlsx
ctpt/ok/: calculator.cxx  ctpt_api.cxx  ctpt_api.hpp  data_source.cxx  data_source.hpp  direct_scanner.cxx  direct_scanner.hpp  field_excitation_calculator.cxx  fpga.cxx  fpga.hpp  functions.hpp  raw_wave.cxx  raw_wave.hpp  scan_strategy.cxx  scan_strategy.hpp  wave_gen.cxx
ctpt/test/: #demo_fpga.cxx#  demo.cxx  demo_fpga (复件).cxx  demo_fpga.cxx  demo_fpga.cxx~  main.cxx  test.cxx  test.hpp  test2.cxx  test_fpga.cxx  test_raw.cxx
ctpt/testbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  demo1  fpga
ctpt/win32/: CMakeLists.txt
